# libhat-rs

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  ReadME.md
.github/workflows/: ci.yml
benches/: scanner.rs
bindings/c/: libhat.h
bindings/cpp/: libhat.hpp
bindings/cpp/libhat/: defines.hpp  memory.hpp  process.hpp  result.hpp  scanner.hpp  signature.hpp
bindings/cpp/module/: libhat.cppm
bindings/cs/libhat-sharp/: Utils.cs
bindings/cs/libhat-sharp/Native/: Functions.cs  ScanAlignment.cs  Status.cs
bindings/java/src/main/java/me/zero/libhat/: Hat.java  ScanAlignment.java
bindings/java/src/main/java/me/zero/libhat/jna/: Libhat.java
bindings/python/: ReadME.md  pyproject.toml
bindings/python/hat/: __init__.py  _native.py
bindings/zig/: build.zig  libhat.zig
examples/c/: CMakeLists.txt
examples/c/buffer/: main.c
examples/c/module/: main.c
examples/cpp/header/: CMakeLists.txt  main.cpp
examples/cpp/module/: CMakeLists.txt  main.cpp
examples/cs/buffer/: Program.cs
examples/cs/module/: Program.cs
examples/java/: HatExample.java
examples/python/: basic.py
examples/zig/: build.zig
examples/zig/buffer/: main.zig
examples/zig/module/: main.zig
libhat-macros/: Cargo.toml
libhat-macros/src/: lib.rs
src/: access.rs  c.rs  frequency.rs  lib.rs  memory_protector.rs  protection.rs  result.rs  scanner.rs  signature.rs  system.rs
src/arch/: avx2.rs  avx512.rs  mod.rs  neon.rs  sse.rs
src/process/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: c_api.rs
